Fix blurry art in Firefox

--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ html {
     margin-right: auto;
     width: 100px;
     image-rendering: pixelated;
+    image-rendering: -moz-crisp-edges;
     image-rendering: crisp-edges;
 }
 
